# aml

./: .env-example  .gitignore  API-docs.md  Dockerfile  LICENSE  README.md  TODO.md  build.sh  docker-compose.override.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  run.sh
.github/workflows/: flake.yaml  flake_pylint_mypy.yml  mypy.yaml  pylint.yml
aml/: main.py  make_labels.py  make_visualisations.py  parse_data.py  robustness.py  util.py
aml/ViT/: ViT.py  ViTTrainer.py  ViT_utils.py  test.py
aml/api/: ViTAPI.py  api.py
aml/evaluator/: Evaluator.py  example.py
aml/interface/: ModelInterface.py
aml/preprocessing/: PreprocessPipeline.py  TreeImageDataset.py  TreePreprocessPipeline.py  TreePrerocessPipeline.py  ViTImageDataset.py  ViTPreprocessPipeline.py  data_util.py
aml/random_forests/: CompositeRandomForest.py  RandomForest.py  RandomForestClassifier.py  RandomForestClassifierTest.py  RandomForestRegressor.py  RandomForestRegressorTest.py  RandomForestTest.py  RandomForestUtils.py  forest_train_util.py  forest_utils.py  random_forest.py  random_forest_abstract.py  random_forest_classifier.py  random_forest_regressor.py  todo
aml/streamlit_app/: draw_bounding_box.py  run_app.py  run_streamlit.py  streamlit.py  welcome.py
aml/tboard/: plotting.py  summarywriter.py
aml/tensorboard/: summarywriter.py
weights/: ViT_2025-05-16_ValLoss_1.84.pth
weights/ViT/: 123.pth  124.pth  125.pth  126.pth  127.pth
weights/forest/: classifier.pkl  regressor.pkl
weights/forest/123/: classifier.pkl  regressor.pkl
weights/forest/124/: classifier.pkl  (+1 more)
(+6 files in other folders)
